<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.CreateCardFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:text="Add new card"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <ImageView
                    android:id="@+id/iv_back"
                    android:src="@drawable/ic_arrow_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:tint="#DFDFDF" />
            </FrameLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="#F0F1F5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:layout_marginHorizontal="27dp"
                app:cardCornerRadius="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:paddingVertical="15dp"
                    android:background="#236AF6"
                    android:paddingHorizontal="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_card_name"
                        android:textColor="#DFDFDF"
                        android:text="@string/card_name"
                        android:textSize="16sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/tv_card_number"
                        android:text="@string/card_number_mask"
                        android:textColor="#DFDFDF"
                        android:layout_marginTop="20dp"
                        android:textSize="17sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/tv_card_balance"
                        android:text="@string/card_expdate_mask"
                        android:textColor="#DFDFDF"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="5dp"
                        android:textSize="17sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>


                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:layout_marginTop="20dp"
                android:text="@string/card_number"
                android:textSize="15sp"
                android:layout_marginStart="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.google.android.material.card.MaterialCardView
                app:cardCornerRadius="12dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <FrameLayout
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:id="@+id/et_card_number"
                        android:background="@color/white"
                        android:backgroundTint="@null"
                        android:inputType="number"
                        android:maxLength="12"
                        android:imeOptions="actionNext"
                        android:drawableStart="@drawable/ic_payment"
                        android:drawablePadding="10dp"
                        android:hint="Enter your card number"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
                </FrameLayout>

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:layout_marginTop="20dp"
                android:text="@string/expire_date"
                android:textSize="15sp"
                android:layout_marginStart="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.google.android.material.card.MaterialCardView
                app:cardCornerRadius="12dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <FrameLayout
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:id="@+id/et_card_expdate"
                        android:background="@color/white"
                        android:hint="--/--"
                        android:imeOptions="actionNext"
                        android:maxLength="5"
                        android:inputType="date"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
                </FrameLayout>

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:layout_marginTop="20dp"
                android:text="@string/expire_date"
                android:textSize="15sp"
                android:layout_marginStart="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.google.android.material.card.MaterialCardView
                app:cardCornerRadius="12dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <FrameLayout
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:id="@+id/et_card_name"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:imeOptions="actionSend"
                        android:background="@color/white"
                        android:hint="Enter your card name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
                </FrameLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

        <Button
            android:id="@+id/b_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="25dp"
            android:layout_marginHorizontal="20dp"
            android:backgroundTint="#236AF6"
            android:text="@string/save"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>